Fixed white line on mobile devices

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,4 +21,5 @@ Header {
 Footer {
   position: fixed;
   width: 100%;
+  bottom: 0;
 }
